--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # lambda applications should use the following log4j appender
 log4j.appender.LAMBDA=com.amazonaws.services.lambda.runtime.log4j.LambdaAppender
 log4j.appender.LAMBDA.layout=org.apache.log4j.PatternLayout
-log4j.appender.LAMBDA.layout.conversionPattern=[%d] [%X{AWSRegion}] [%X{AWSInitialRequestId}] [%X{AWSRequestId}] %X{AWSFunctionName} %X{AWSFunctionVersion} %-5p %-40.40c [%m]%n
-log4j.rootLogger=INFO, LAMBDA
+log4j.appender.LAMBDA.layout.conversionPattern=[%d] [%X{AWSRequestId}] %X{AWSFunctionName} %X{AWSFunctionVersion} %-5p %-40.40c [%m]%n
+log4j.rootLogger=DEBUG, LAMBDA
 log4j.appender.Sentry.threshold=WARN
